MicroService/nacos/nacos/kubernetes/nacos-no-pvc-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: dev01
spec:
  serviceName: nacos-headless
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
        #enable istio sidecar injection
        sidecar.istio.io/inject: "false"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: k8snacos
          imagePullPolicy: Always
          image: nacos/nacos-server:1.4.1
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client
            - containerPort: 7848
              name: rpc
            - containerPort: 9848
              name: client-rpc
            - containerPort: 9849
              name: raft-rpc
          volumeMounts:
          - mountPath: /home/nacos/data
            name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      #storageClassName: rbd
      resources:
        requests:
          storage: 20Gi
