MicroService/nacos/nacos/kubernetes/nacos-headless-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nacos-headless
  namespace: dev01
  labels:
    app: nacos-headless
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - port: 8848
      name: server
      targetPort: 8848
    - port: 7848
      name: rpc
      targetPort: 7848
    - port: 9848
      name: client-rpc
      targetPort: 9848
    - port: 9849
      name: raft-rpc
      targetPort: 9849
  clusterIP: None
  selector:
    app: nacos
