MicroService/nacos/nacos/kubernetes/nacos-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nacos-svc
  namespace: dev01
  labels:
    app: nacos-svc
spec:
  type: ClusterIP
  ports:
    - port: 8848
      name: server
      targetPort: 8848
  selector:
    app: nacos
